force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description
  >Manufacturer brand shown on the PDP heading, on product cards and as a search facet. Restricted picklist because Commerce search can only facet on enumerable field types (free text is not facetable); add a value here before curating a new brand.</description>
    <inlineHelpText>Marca del fabricante, p. ej. LvlUp.</inlineHelpText>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LvlUp</fullName>
            </value>
            <value>
                <fullName>RetroStation</fullName>
            </value>
            <value>
                <fullName>CloudPlay</fullName>
            </value>
            <value>
                <fullName>Nova Interactive</fullName>
            </value>
            <value>
                <fullName>Redline Studios</fullName>
            </value>
            <value>
                <fullName>Mythdale Games</fullName>
            </value>
            <value>
                <fullName>Blackout Games</fullName>
            </value>
            <value>
                <fullName>Greenfield Interactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>