force-app/main/default/objects/Product2/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <description
  >EAN-13/GTIN barcode identifier used by resellers to match products across systems.</description>
    <inlineHelpText>EAN-13 barcode, digits only.</inlineHelpText>
    <label>EAN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>