force-app/main/default/objects/Product2/fields/External_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Id__c</fullName>
    <description>Id of the product in the external source system. Mirrors External_Product__c.External_Id__c on the published Product2 to trace back to the staging record. Marked as External ID to support upsert matching.</description>
    <externalId>true</externalId>
    <label>External Product Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>