force-app/main/default/objects/Product2/fields/External_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Source__c</fullName>
    <description>Name of the originating external system for this product, e.g. "Platzi". Empty for internal catalog products.</description>
    <label>External Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>