force-app/main/default/objects/Product2/fields/Inventory_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Quantity__c</fullName>
    <description>Units on hand for the storefront. Simulated inventory maintained directly in Salesforce because Omnichannel Inventory (OCI) is not used in this Developer Edition org. Read by the Contextual Quick Buy LWC to validate stock.</description>
    <inlineHelpText>Available units on hand.</inlineHelpText>
    <label>Inventory Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>