force-app/main/default/objects/Product2/fields/Is_External_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Product2 that originated from an external manufacturer feed (e.g. Platzi) rather than the internal catalog. Set by the future publish step.</description>
    <label>Is External Product</label>
    <type>Checkbox</type>
</CustomField>