force-app/main/default/objects/Product2/fields/Order_Increment__c.field-meta.xml
<CustomField>
    <fullName>Order_Increment__c</fullName>
    <defaultValue>1</defaultValue>
    <description
  >DEPRECATED (ADR-0009): the purchase multiple / case pack is now the Increment of the standard PurchaseQuantityRule, associated via ProductQuantityRule and read by the Quick Buy. This field is no longer read by the storefront; kept read-only for reversibility.</description>
    <inlineHelpText
  >DEPRECATED — use the standard Purchase Quantity Rule (ADR-0009). No longer read by the storefront.</inlineHelpText>
    <label>Order Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>