force-app/main/default/objects/Product2/fields/Warranty_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Months__c</fullName>
    <description
  >Commercial warranty in months shown on the PDP heading via field mapping.</description>
    <inlineHelpText>Warranty duration in months.</inlineHelpText>
    <label>Warranty (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>